refactor: update time_norm from str to enum

--- a/tutorials/get_started.ipynb
+++ b/tutorials/get_started.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "from noisepy.seis import download, cross_correlate, stack_cross_correlations, plotting_modules, __version__\n",
     "from noisepy.seis.asdfstore import ASDFRawDataStore, ASDFCCStore, ASDFStackStore\n",
-    "from noisepy.seis.datatypes import CCMethod, ConfigParameters, FreqNorm\n",
+    "from noisepy.seis.datatypes import CCMethod, ConfigParameters, FreqNorm, TimeNorm\n",
     "from dateutil.parser import isoparse\n",
     "import os\n",
     "print(f\"Using NoisePy version {__version__}\")\n",
@@ -123,7 +123,7 @@
     "config.smoothspect_N = 10  # moving window length to smooth spectrum amplitude (points)\n",
     "    # here, choose smoothspect_N for the case of a strict whitening (e.g., phase_only)\n",
     "\n",
-    "config.time_norm = \"no\"  # 'no' for no normalization, or 'rma', 'one_bit' for normalization in time domain,\n",
+    "config.time_norm = TimeNorm.NO  # 'no' for no normalization, or 'rma', 'one_bit' for normalization in time domain,\n",
     "    # TODO: change time_norm option from \"no\" to \"None\"\n",
     "config.smooth_N= 10  # moving window length for time domain normalization if selected (points)\n",
     "\n",
