--- a/tutorials/noisepy_pnwstore_tutorial.ipynb
+++ b/tutorials/noisepy_pnwstore_tutorial.ipynb
@@ -77,7 +77,7 @@
     "from noisepy.seis.asdfstore import ASDFCCStore, ASDFStackStore                          # Object to store ASDF data within noisepy\n",
     "from noisepy.seis.scedc_s3store import channel_filter\n",
     "from noisepy.seis.pnwstore import PNWDataStore\n",
-    "from noisepy.seis.datatypes import CCMethod, ConfigParameters, Channel, ChannelData, ChannelType, FreqNorm, Station    # Main configuration object\n",
+    "from noisepy.seis.datatypes import CCMethod, ConfigParameters, Channel, ChannelData, ChannelType, FreqNorm, Station, TimeNorm    # Main configuration object\n",
     "from noisepy.seis.channelcatalog import XMLStationChannelCatalog        # Required stationXML handling object\n",
     "import os\n",
     "from datetime import datetime\n",
@@ -189,7 +189,7 @@
     "config.smoothspect_N = 10  # moving window length to smooth spectrum amplitude (points)\n",
     "    # here, choose smoothspect_N for the case of a strict whitening (e.g., phase_only)\n",
     "\n",
-    "config.time_norm = \"no\"  # 'no' for no normalization, or 'rma', 'one_bit' for normalization in time domain,\n",
+    "config.time_norm = TimeNorm.NO  # 'no' for no normalization, or 'rma', 'one_bit' for normalization in time domain,\n",
     "    # TODO: change time_norm option from \"no\" to \"None\"\n",
     "config.smooth_N= 10  # moving window length for time domain normalization if selected (points)\n",
     "\n",
