--- a/tutorials/noisepy_scedc_tutorial.ipynb
+++ b/tutorials/noisepy_scedc_tutorial.ipynb
@@ -69,7 +69,7 @@
         "from noisepy.seis import cross_correlate, stack_cross_correlations, __version__       # noisepy core functions\n",
         "from noisepy.seis.asdfstore import ASDFCCStore, ASDFStackStore          # Object to store ASDF data within noisepy\n",
         "from noisepy.seis.scedc_s3store import SCEDCS3DataStore, channel_filter # Object to query SCEDC data from on S3\n",
-        "from noisepy.seis.datatypes import CCMethod, ConfigParameters, FreqNorm, StackMethod        # Main configuration object\n",
+        "from noisepy.seis.datatypes import CCMethod, ConfigParameters, FreqNorm, StackMethod, TimeNorm        # Main configuration object\n",
         "from noisepy.seis.channelcatalog import XMLStationChannelCatalog        # Required stationXML handling object\n",
         "import os\n",
         "from datetime import datetime, timezone\n",
@@ -210,7 +210,7 @@
         "\n",
         "\n",
         "#################### TEMPORAL NORMALIZATION ##########\n",
-        "config.time_norm = \"one_bit\"  # 'no' for no normalization, or 'rma', 'one_bit' for normalization in time domain,\n",
+        "config.time_norm = TimeNorm.ONE_BIT # 'no' for no normalization, or 'rma', 'one_bit' for normalization in time domain,\n",
         "config.smooth_N= 10  # moving window length for time domain normalization if selected (points)\n",
         "\n",
         "\n",
