--- a/tutorials/old/cross_correlation_from_sac.ipynb
+++ b/tutorials/old/cross_correlation_from_sac.ipynb
@@ -72,7 +72,7 @@
     "import matplotlib.pyplot as plt \n",
     "\n",
     "sys.path.insert(1,'../src')\n",
-    "from noisepy.seis.datatypes import CCMethod, FreqNorm\n",
+    "from noisepy.seis.datatypes import CCMethod, FreqNorm, TimeNorm\n",
     "from noisepy.seis import noise_module"
    ]
   },
@@ -107,7 +107,7 @@
     "freqmax   = 8            \n",
     "\n",
     "freq_norm   = FreqNorm.RMA          # rma-> running mean average for frequency-domain normalization\n",
-    "time_norm   = 'no'                  # no-> no time-domain normalization; other options are 'rma' for running-mean and 'one-bit'\n",
+    "time_norm   = TimeNorm.NO           # no-> no time-domain normalization; other options are 'rma' for running-mean and 'one-bit'\n",
     "cc_method   = CCMethod.XCORR               # xcorr-> pure cross correlation; other option is 'decon'\n",
     "substack       = False              # sub-stack daily cross-correlation or not\n",
     "substack_len   = cc_len             # how long to stack over: need to be multiples of cc_len\n",
