--- a/tutorials/old/download_toASDF_cross_correlation.ipynb
+++ b/tutorials/old/download_toASDF_cross_correlation.ipynb
@@ -69,7 +69,7 @@
     "import pandas as pd\n",
     "from obspy import UTCDateTime\n",
     "import matplotlib.pyplot as plt\n",
-    "from noisepy.seis.datatypes import CCMethod, FreqNorm\n",
+    "from noisepy.seis.datatypes import CCMethod, FreqNorm, TimeNorm\n",
     "from obspy.clients.fdsn import Client\n",
     "\n",
     "\n",
@@ -209,7 +209,7 @@
     "inc_hours = 24                      # basic length (hour) of the continous noise data        \n",
     "\n",
     "freq_norm   = FreqNorm.RMA          # rma-> running mean average for frequency-domain normalization\n",
-    "time_norm   = 'no'                  # no-> no time-domain normalization; other options are 'rma' for running-mean and 'one-bit'\n",
+    "time_norm   = TimeNorm.NO                  # no-> no time-domain normalization; other options are 'rma' for running-mean and 'one-bit'\n",
     "cc_method   = CCMethod.XCORR              # xcorr-> pure cross correlation; other option is 'decon'\n",
     "substack       = False              # sub-stack daily cross-correlation or not\n",
     "substack_len   = cc_len             # how long to stack over: need to be multiples of cc_len\n",
